Implement comprehensive integration test suite for PocketBase
- Created integration test setup with test user management and data cleanup
- Added authentication integration tests covering registration, login, and auth state
- Implemented Todo CRUD integration tests with full lifecycle testing
- Created API service integration tests for all service functions
- Added error handling integration tests for network and validation errors
- Implemented concurrent operations integration tests with stress testing
- Fixed PocketBase configuration and URL consistency
- Created migration files for todos collection setup
- Updated test scripts and Vite configuration for integration testing
- Re-enabled and enhanced original pocketbase service tests

The integration test suite provides comprehensive coverage of:
- User authentication flows
- Todo CRUD operations
- API service layer functionality
- Error handling and edge cases
- Concurrent access and performance
- Data consistency and integrity

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "test:integration": "vitest run src/tests/integration",
+    "test:unit": "vitest run src/tests --exclude src/tests/integration",
+    "test:all": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
     "react": "^18.2.0",
