Add test results and fixes
- Fixed CLI syntax issues in package.json test scripts
- Confirmed unit tests (React components) are passing with 93.26% line coverage
- Identified integration tests are failing due to PocketBase collection permissions issue
- Unit tests: 93 passed | 1 skipped (94 tests)
- Integration tests: 25 failing due to 'Only superusers can perform this action' error
- Issue: PocketBase todos collection needs proper access rules configuration
- All React component tests passing with good coverage
- Test infrastructure working correctly

Next steps needed:
1. Fix PocketBase collection access rules to allow authenticated users
2. Re-run integration tests to validate full integration test suite

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:integration": "vitest run src/tests/integration",
-    "test:unit": "vitest run src/tests --exclude src/tests/integration",
+    "test:unit": "vitest run src/tests --exclude='src/tests/integration/**'",
     "test:all": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
