--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -37,6 +38,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest-axe": "^10.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
