--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,5 +27,12 @@
     }
   },
   "include": ["src"],
+  "exclude": [
+    "src/tests/**/*",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
