fix: remove duplicate /api from API_BASE_URL in env files

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,7 +2,7 @@
 # These variables are loaded when running the app in development mode
 
 # API Configuration
-VITE_API_URL=http://127.0.0.1:8787/api
+VITE_API_URL=http://127.0.0.1:8787
 
 # Security Configuration
 VITE_HTTPS_ENABLED=false
