--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
 # Production Environment Variables
-VITE_API_URL=https://pbtodo-api.bua.workers.dev/api
+VITE_API_URL=https://pbtodo-api.bua.workers.dev
 VITE_HTTPS_ENABLED=true
 VITE_DEV_MODE=false
 VITE_SESSION_TIMEOUT_MINUTES=1440
