--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,19 @@
-# PocketBase Configuration
-# The URL of your PocketBase server
-VITE_POCKETBASE_URL=http://127.0.0.1:8090
+# Environment Configuration Example
+# Copy this file to .env.local and fill in your values
+# NEVER commit .env.local to git!
+
+# API Configuration
+VITE_API_URL=https://pbtodo-api.bua.workers.dev/api
+VITE_ENVIRONMENT=development
 
 # Security Configuration
-# Enable HTTPS in production (set to 'true' for production)
-VITE_HTTPS_ENABLED=false
-
-# Session Configuration
-# Session timeout in minutes (default: 24 hours)
-VITE_SESSION_TIMEOUT_MINUTES=1440
-
-# Password Requirements
-# Minimum password length (default: 8)
-VITE_MIN_PASSWORD_LENGTH=8
-
-# Require password complexity (default: true)
-VITE_REQUIRE_PASSWORD_COMPLEXITY=true
-
-# Rate Limiting
-# Maximum login attempts per minute (default: 5)
-VITE_MAX_LOGIN_ATTEMPTS_PER_MINUTE=5
-
-# Development Mode
-# Set to 'false' for production builds
-VITE_DEV_MODE=true
-
-# CORS Configuration
-# Comma-separated list of allowed origins in production
-VITE_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
-
-# Feature Flags
-# Enable advanced security features
+VITE_HTTPS_ENABLED=true
+VITE_DEV_MODE=false
 VITE_ENABLE_SECURITY_HEADERS=true
 VITE_ENABLE_CSP=true
 VITE_ENABLE_HSTS=true
-```
+
+# DO NOT PUT ACTUAL SECRETS HERE!
+# Secrets are managed via:
+# - Cloudflare Workers: wrangler secret put SECRET_NAME
+# - GitHub Actions: Repository Settings -> Secrets
