🔧 Comprehensive CI/CD Pipeline Overhaul
## 🎯 Major Changes

### 🌿 Branch Strategy Standardization
- **Standardize on  branch** for production (was mixed master/main)
- **Update all workflows** to use consistent branch naming
- **Remove redundant workflows** to eliminate deployment conflicts

### 🔄 Workflow Cleanup & Consistency
- **Rename workflows** for clarity: deploy-staging.yml, deploy-production.yml
- **Remove conflicting deploy-staging.yml** (replaced by deploy-cloudflare.yml)
- **Standardize naming conventions** across all CI/CD files

### 🌍 Environment Configuration
- **Fix environment variables** to use consistent naming (VITE_API_URL)
- **Add environment-specific logic** for better CSP handling
- **Update API URL references** throughout configuration

### 📚 Documentation Updates
- **Comprehensive deployment guide** with troubleshooting steps
- **Update README** with current Cloudflare architecture
- **Fix URLs in documentation** to match current deployments
- **Standardize environment documentation** with branch strategy

### 🛡️ Security Improvements
- **Enhanced CSP generation** with environment-specific logic
- **Improve security header consistency** across environments
- **Add development-friendly CSP policies** for local testing

### 🎯 Key Fixes
- **CSP blocking issues**: Resolved with dynamic environment handling
- **API endpoint duplication**: Fixed double /api prefixes
- **Deployment conflicts**: Eliminated redundant workflows
- **Documentation drift**: Updated all references to current state

This ensures reliable, consistent deployments across all environments.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: 🚀 CI Pipeline
 
 on:
   push:
-    branches: [master, main, develop, feature/*]
+    branches: [main, develop, feature/*]
   pull_request:
-    branches: [master, main, develop]
+    branches: [main, develop]
 
 env:
   NODE_VERSION: "20"
