📚 Fix staging URLs in documentation
## 🌍 Documentation Corrections

### URL Consistency Fixes
- **ENVIRONMENTS.md**: Updated staging frontend URL to
- **URLS.md**: Fixed staging frontend URLs to match actual deployment
- **README.md**: Corrected staging URL to

### ✅ Verified Consistency
| Environment | Branch | Frontend URL | API URL | Status |
|-------------|---------|----------------|-------------|---------|
| Development | feature/* | http://localhost:5173 | http://localhost:8787/api | ✅ |
| Staging | develop | https://develop.pbtodo-frontend.pages.dev | https://pbtodo-api-staging.bua.workers.dev/api | ✅ |
| Production | main | https://pbtodo-frontend.pages.dev | https://pbtodo-api.bua.workers.dev/api | ✅ |

### 🎯 Documentation Alignment
- All documentation now matches actual deployment behavior
- Staging URLs correctly reference develop branch deployment
- Production URLs correctly reference main branch deployment
- Environment variables properly documented for each environment

This ensures developers and operators have accurate documentation for all deployment scenarios.

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -6,9 +6,9 @@ on:
   workflow_dispatch:
     inputs:
       reason:
-        description: 'Reason for manual staging deployment'
+        description: "Reason for manual staging deployment"
         required: false
-        default: 'Manual staging deployment'
+        default: "Manual staging deployment"
 
 env:
   NODE_VERSION: "20"
