fix: add missing GitHub Actions permissions for deployment
Add missing permissions to deploy-staging.yml:
- contents: write (for checkout and file operations)
- deployments: write (required for GitHub deployments API)
- pull-requests: write (for PR comments)
- pages: write (for Cloudflare Pages deployment)
- id-token: write (for authentication)

This fixes the 403 'Resource not accessible by integration' error
that was preventing Cloudflare Pages deployment.

Error resolved:
- HttpError: Resource not accessible by integration
- Status: 403 Forbidden
- API: https://api.github.com/repos/gnoparus/pbtodo/deployments

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -13,6 +13,13 @@ on:
 env:
   NODE_VERSION: "20"
 
+permissions:
+  contents: write
+  deployments: write
+  pull-requests: write
+  pages: write
+  id-token: write
+
 jobs:
   # Job 1: Build and Test
   build-and-test:
