chore: add .wrangler directories to .gitignore
- Exclude Wrangler development state directories from version control
- Prevents local development artifacts from being tracked
- Includes root, workers, and nested .wrangler directories
- Keeps repository clean for all team members

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,12 @@ pocketbase/pb_hooks/
 pocketbase/*.db
 pocketbase/*.log
 
+# Wrangler (Cloudflare Workers)
+.wrangler/
+workers/.wrangler/
+*/.wrangler/
+**/.wrangler/
+
 # Docker
 .dockerignore
 docker-compose.override.yml
